Fix: faulty spacing

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -101,10 +101,6 @@ pre[class*='language-'] {
     margin-top: 0 !important;
 }
 
-ul+h2 {
-    margin-top: 16px;
-}
-
 .ch-scrollycoding-step-content {
     margin-bottom: 24px;
     padding: 16px;
@@ -203,10 +199,6 @@ pre code:not(.ch-code-scroll-parent) {
 pre span,
 pre p {
     margin: 0;
-}
-
-pre+h2 {
-    margin-top: 16px;
 }
 
 .note+h2 {
